# idilia-source-plugin

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  source-plugin-valgrind.supp
conf/: idilia.plugin.source.cfg.sample  idilia.plugin.source.cfg.sample.in
plugins/: audio_video_defines.h  gst_utils.c  gst_utils.h  idilia_source.c  idilia_source_common.h  node_service_access.c  node_service_access.h  pipeline_callback_data.h  ports_pool.c  ports_pool.h  queue_callbacks.c  queue_callbacks.h  rtsp_clients_utils.c  rtsp_clients_utils.h  rtsp_server.c  rtsp_server.h  sdp_utils.c  sdp_utils.h  socket_names.h  socket_utils.c  socket_utils.h
